# libtlvcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
.github/workflows/: ci.yml  cmake-multi-platform.yml  issues.yml
cmake/: test.cmake
include/tlvcpp/: tlv.h  tlv_tree.h  tree.h
include/tlvcpp/utilities/: iostream_state_guard.h  scoped_pointer.h  scoped_timer.h  stream_guard.h
src/: main.cpp  tlv.cpp  tlv.h  tlv_tree.cpp  tlv_tree.h  tree.h  tree_node.h
src/utilities/: hexdump.cpp  hexdump.h  iostream_state_guard.h  life_time.cpp  life_time.h  scoped_timer.h
tests/: decode_encode.cpp
